# texturemaprender

./: .gitignore  CMakeLists.txt
include/: camera.h  cameraloader.h  deferred_neural_renderer.h  frame_writer.h  keyhandler.h  mesh.h  model.h  object.h  renderer.h  scene.h  scenemodel.h  timer.h  utils.h
include/glad/: glad.h
include/interfaces/: iscene.h
include/listeners/: keylistener.h
resources/meshes/: .mlp
src/: cameraloader.cpp  deferred_neural_renderer.cpp  fragmentshader.fs  frame_writer.cpp  glad.c  keyhandler.cpp  main.cpp  object.cpp  renderer.cpp  scene.cpp  scenemodel.cpp  timer.cpp  vertexshader.vs  vertexshadercolor.vs
src/shaders/: fragmentshader.fs  fragmentshader_texcoord.fs  fragmentshader_texture.fs  fragmentshader_vertcolor.fs  fragmentshadercolor.fs  vertexshader_scenetexture.vs  vertexshader_texcoord.vs  vertexshader_vertcolor.vs
